# shafi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  eval_golden_warmup.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
dashboard/: server.py
data/: legal_aliases.json  missing_docs.txt
docs/: README.md  competition_matrix.md  i18n.js  index.html  ops_runbook.md  scripts_index.md
profiles/: README.md  kanon2_1792_ablation_20260319.env  kanon2_1792_domain_clean_20260319.env  kanon2_1792_domain_clean_manual_20260319.env  kanon2_1792_domain_clean_manual_v2_20260319.env  main_baseline_20260319.env  private_1792_regime.env  private_v11_ttft_optimized.env  private_v6_regime.env  private_v7_1792_enhanced.env  private_v7_1792_enhanced.env-e  private_v7_enhanced.env  private_v7_enhanced.env-e  private_v8_full.env  private_v8_full.env-e  private_v8_isaacus_reranker.env  private_v9_asst_prompt.env  private_v9_baseline_working.env  private_v9_claude.env  private_v9_eqa.env  private_v9_interleaved.env  private_v9_largepage.env  private_v9_multihop.env  private_v9_rerank12.env
scripts/: agent_dashboard.py  agent_status.sh  agent_watcher.py  analyze_answer_drift.py  analyze_benchmark_delta.py  analyze_leaderboard.py  analyze_page_projection_drift.py  analyze_research_closeouts.py  answer_audit_extension.json  audit_comparison_title_page_candidates.py  audit_competition_matrix_coverage.py  audit_duplicate_families.py  audit_exactness_candidate.py  (+123 more)
(+882 files in other folders)
