[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shafi"
version = "0.1.0"
description = "Agentic RAG Legal Challenge 2026 — competition system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "qdrant-client>=1.13",
    "fastembed>=0.3",
    "langgraph>=0.3",
    "langchain-core>=0.3",
    "openai>=1.60",
    "cohere>=5.13",
    "tiktoken>=0.9",
    "docling>=2.15",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "deepeval>=3.7",
    "sse-starlette>=2.2",
    "tenacity>=9.0",
    "structlog>=25.5.0",
    "lightgbm>=4.6.0",
    "joblib>=1.4",
    "scikit-learn>=1.5",
    "bm25s>=0.3.2.post1",
]

[project.optional-dependencies]
dev = [
    "pandas>=2.2",
    "pyarrow>=18.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.14.5",
    "pyright>=1.1",
    "PyYAML>=6.0",
    "httpx",  # for TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["src/shafi"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shafi"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
stubPath = "typings"
include = ["src"]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
